# particle_assembler

./: CMakeLists.txt  README.md
examples/: tetlow_phi_10p.json  tetlow_phi_30p.json  tetlow_phi_50p.json
python/: convert_output.py  convert_output_to_vtp.py
source/: particle_assembler.cc
